# Connect-4-AI

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs
libs/alpha-beta-solver/: Cargo.toml
libs/alpha-beta-solver/src/: alpha_beta_solver.rs  alpha_beta_with_iterative_deepening.rs  alpha_beta_with_lower_bound_transposition.rs  alpha_beta_with_opening_book.rs  alpha_beta_with_optimised_transposition.rs  alpha_beta_with_ordering.rs  alpha_beta_with_transposition.rs  anticipating_alpha_beta.rs  final_alpha_beta.rs  lib.rs  lower_bound_transposition_table.rs  move_sorter.rs  opening_book.rs  optimised_transposition_table.rs  simple_transposition_table.rs  transposition_table.rs
libs/benchmark/: Cargo.toml
libs/benchmark/src/: benchmark.rs  lib.rs  statistics.rs  test_set.rs
libs/game-board/: Cargo.toml
libs/game-board/src/: anticipating_bitboard_position.rs  bitboard_position.rs  bitboard_position_with_ordering.rs  grid_position.rs  lib.rs  sequence_position.rs  stack_position.rs
libs/game-cli/: Cargo.toml
libs/game-cli/src/: lib.rs
libs/min-max-solver/: Cargo.toml
libs/min-max-solver/src/: lib.rs
