[package]
name = "connect-4-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-min-max-solver = { path = "../libs/min-max-solver" }
lib-benchmark = { path = "../libs/benchmark" }
lib-game-board = { path = "../libs/game-board" }